<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting_textview"
        android:textSize="20sp"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        app:layout_constraintBottom_toTopOf="@id/name_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/display_button"
        android:onClick="addName"
        android:backgroundTint="@color/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_button_text"
        app:layout_constraintBottom_toTopOf="@id/cycle_textview"
        app:layout_constraintLeft_toRightOf="@id/name_edittext"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/name_edittext"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cycle_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/display_button"/>

    <TextView
        android:id="@+id/cycle_textview"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:text="@string/cycle_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cycle_forward_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/cycle_forward_button"
        android:onClick="cycleForward"
        android:backgroundTint="@color/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle_forward_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cycle_back_button"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/cycle_back_button"
        android:onClick="cycleBack"
        android:backgroundTint="@color/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cycle_forward_button"/>

    <Button
        android:id="@+id/music_button"
        android:onClick="playMusic"
        android:backgroundTint="@color/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_music"
        app:layout_constraintTop_toBottomOf="@id/cycle_back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>